<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014  Marcin Krupa
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">AGH Service Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="new_request">New request</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="request_sent">Request sent</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="my_requests">My requests</string>
    <string name="validator_empty">Field cannot be empty</string>
    <string name="validator_not_email">Not a valid email address</string>
    <string name="validator_not_agh_email">Email address not from agh.edu.pl domain</string>
    <string name="validator_too_short">Minimum field length is %1$d characters</string>
    <string name="title_servicerequest_list">My Service Requests</string>
    <string name="title_servicerequest_detail">Service Request details</string>
    <string name="item_id" translatable="false">item_id</string>
    <string name="ndef_mime_type" translatable="false">application/pl.edu.agh.servicetracker</string>
    <string name="item">Item</string>
    <string name="status">Status</string>
    <string name="response">Response</string>
    <string name="date_created">Date created</string>
    <string name="last_modified">Last modified</string>
    <string name="loading">Loading...</string>
    <string name="sending">Sending...</string>
    <string name="opening_text">This is your first time using our application or your authentication token has
        been invalidated.</string>
    <string name="provide_agh_address">Please provide a valid email address in the agh.edu.pl domain.</string>
    <string name="send_token">Send token</string>
    <string name="title_activity_send_token">Welcome</string>
    <string name="your_email_address">Your email address</string>
    <string name="title_activity_provide_token">Authentication</string>
    <string name="provide_token_text">Please provide the authentication token sent to you via email</string>
    <string name="authenticate">Authenticate</string>
    <string name="resend_token">Resend token</string>
    <string name="change_email">Change email</string>
    <string name="invalid_token">Invalid token</string>
    <string name="invalidate_token">Invalidate token</string>
    <string name="connection_error">Connection error</string>
    <string name="other">Other</string>
    <string name="checking_token_validity">Checking token validity...</string>
</resources>
