<!--
  ~ Copyright (C) 2014  Marcin Krupa
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    tools:context="pl.edu.agh.servicetracker.SendTokenActivity">

        <TextView
                android:id="@+id/opening_text"
                android:text="@string/opening_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
                android:id="@+id/provide_email_address"
                android:text="@string/provide_agh_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/opening_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="20dp"/>

        <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/provide_email_address"
                android:hint="@string/your_email_address"
                android:layout_marginTop="30dp"
                android:inputType="textEmailAddress"
                android:autoText="false"
                android:editable="true"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:imeOptions="flagNoExtractUi"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_token"
                android:id="@+id/sendTokenButton"
                android:layout_below="@+id/email_address"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</ScrollView>
