<!--
  ~ Copyright (C) 2014  Marcin Krupa
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    tools:context="pl.edu.agh.servicetracker.ProvideTokenActivity">

        <TextView
                android:id="@+id/provide_token_text"
                android:text="@string/provide_token_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
                android:id="@+id/token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/provide_token_text"
                android:hint="Token"
                android:layout_marginTop="30dp"
                android:inputType="text"
                android:autoText="false"
                android:editable="true"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:imeOptions="flagNoExtractUi"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authenticate"
                android:id="@+id/authenticateButton"
                android:layout_below="@+id/token"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/authenticateButton"
                android:layout_marginTop="20dp">

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/resend_token"
                    android:id="@+id/resendTokenButton"
                    android:layout_weight="1"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/change_email"
                    android:id="@+id/changeEmailButton"
                    android:layout_weight="1"/>
        </LinearLayout>


    </RelativeLayout>

</ScrollView>
