<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/name"
            android:id="@+id/nameLabel" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/name" android:layout_below="@+id/nameLabel" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:autoText="false"
            android:editable="true"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:imeOptions="flagNoExtractUi"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/category"
            android:id="@+id/categoryLabel" android:layout_below="@+id/name" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginTop="20dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/category" android:layout_below="@+id/categoryLabel" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:autoText="false"
            android:editable="true"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:imeOptions="flagNoExtractUi"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/location"
            android:id="@+id/locationLabel" android:layout_below="@+id/category" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginTop="20dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text=""
            android:id="@+id/location" android:layout_below="@+id/locationLabel" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:autoText="false"
            android:editable="true"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:imeOptions="flagNoExtractUi"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/description"
            android:id="@+id/descriptionLabel" android:layout_below="@+id/location" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/description" android:layout_below="@+id/descriptionLabel" android:layout_above="@+id/sendRequestButton" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:autoText="false"
            android:editable="true"
            android:selectAllOnFocus="true"
            android:imeOptions="flagNoExtractUi"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/sendRequestButton" android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>