<!--
  ~ Copyright (C) 2014  Marcin Krupa
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    tools:context="pl.edu.agh.servicetracker.MainActivity">

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_request"
                android:id="@+id/new_request" android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" android:layout_alignParentRight="true"
                />
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_qr_code"
                android:id="@+id/scan_qr_code" android:layout_below="@+id/new_request"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" android:layout_alignParentRight="true"
                android:layout_marginTop="25dp"
                />
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_requests"
                android:id="@+id/my_requests" android:layout_below="@+id/scan_qr_code"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" android:layout_marginTop="25dp"
                android:layout_alignParentEnd="true"/>
    </RelativeLayout>
</ScrollView>