<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="pl.edu.agh.servicetracker.ServiceRequestDetailFragment">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/servicerequest_name"
                  style="?android:attr/textAppearanceLarge"
                  android:layout_marginTop="5dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/item"
                android:id="@+id/servicerequest_item_label" android:layout_below="@+id/servicerequest_name"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" android:layout_marginTop="20dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text=""
                android:id="@+id/servicerequest_item" android:layout_below="@+id/servicerequest_item_label"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/description"
                android:id="@+id/servicerequest_description_label" android:layout_below="@+id/servicerequest_item"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" android:layout_marginTop="20dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/servicerequest_description"
                android:layout_below="@+id/servicerequest_description_label"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/date_created"
                android:id="@+id/servicerequest_date_created_label"
                android:layout_below="@+id/servicerequest_description"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" android:layout_marginTop="20dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/servicerequest_date_created"
                android:layout_below="@+id/servicerequest_date_created_label"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/last_modified"
                android:id="@+id/servicerequest_last_modified_label"
                android:layout_below="@+id/servicerequest_date_created"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" android:layout_marginTop="20dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/servicerequest_last_modified"
                android:layout_below="@+id/servicerequest_last_modified_label"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/status"
                android:id="@+id/servicerequest_status_label" android:layout_below="@+id/servicerequest_last_modified"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" android:layout_marginTop="20dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/servicerequest_status" android:layout_below="@+id/servicerequest_status_label"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/response"
                android:id="@+id/servicerequest_response_label" android:layout_below="@+id/servicerequest_status"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" android:layout_marginTop="20dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/servicerequest_response" android:layout_below="@+id/servicerequest_response_label"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"/>
    </RelativeLayout>
</ScrollView>